--- a/socials.html
+++ b/socials.html
@@ -23,7 +23,7 @@
                 <br>
                 <br>
                 <div>
-                    <a href="https://www.github.com/Vegeta2007k/">
+                    <a href="https://www.github.com/KislayMishra69/">
                         <button type="button"><span></span>
                             <img src="unnamed.png", width="55", height="64">
                         </button>
