--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,6 @@
                     <br>
                     <br>
                     
-                    (This page is will be built in the future)
+                    (This page will be built in the future)
                 </p>
             </div>
