--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,12 @@
                 </ul>
             </div>
 
+            <banner class="wrapper">
+                <div id="stars"></div>
+                <div id="stars2"></div>
+                <div id="stars3"></div>
+                <div id="title">
+
             <div class="content">
                 <div class="heading">
                     <h1>About Me</h1>
