--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
                 </ul>
             </div>
 
-            <div class="content">
-                <p>Hello! My Name Is</p>
-                <div class="name">
+            <banner class="wrapper">
+                <div id="stars"></div>
+                <div id="stars2"></div>
+                <div id="stars3"></div>
+                <div id="title">
+                    <p>Hello! My Name Is</p>
                     <h1>Kislay Mishra</h1>
                 </div>
+            </banner>
                 <p>And this is my Portfolio!</p>
                 <div class="home-content">
                     <div class="iAmA"><b>I'm a <span class="typing"></span></b></div>
