--- a/projects.html
+++ b/projects.html
@@ -17,12 +17,18 @@
                 </ul>
             </div>
 
+            <banner class="wrapper">
+                <div id="stars"></div>
+                <div id="stars2"></div>
+                <div id="stars3"></div>
+                <div id="title">
+
             <div class="content">
                 <p>You can read all about my projects here :))
                     <br>
                     <br>
                     <br>
                     
-                    (This page will be built in the future)
+                    (This page is will be built in the future)
                 </p>
             </div>
