--- a/socials.html
+++ b/socials.html
@@ -16,6 +16,12 @@
                     </ul>
                     </div>
                 </div>
+
+                <banner class="wrapper">
+                    <div id="stars"></div>
+                    <div id="stars2"></div>
+                    <div id="stars3"></div>
+                    <div id="title">
     
             <div class="about">
                 <br>
@@ -23,7 +29,7 @@
                 <br>
                 <br>
                 <div>
-                    <a href="https://www.github.com/KislayMishra69/">
+                    <a href="https://www.github.com/Vegeta2007k/">
                         <button type="button"><span></span>
                             <img src="unnamed.png", width="55", height="64">
                         </button>
