--- a/socials.html
+++ b/socials.html
@@ -45,7 +45,7 @@
                         <button type="button"><span></span>
                             <img src="yt.png", width="60", height="64">                        
                         </button>
-                        <a href="https://www.instagram.com/kislay_mishra2007">
+                        <a href="https://www.instagram.com/kislay_2007">
                             <button type="button"><span></span>
                                 <img src="insta.png", width="90", height="64">                        
                             </button>
