--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,8 @@
                 <div id="title">
 
             <div class="content">
-                <p>You can read all about my projects here :))
+                <iframe src="https://github.com/KislayMishra69" title="My Profile!"></iframe>
+
                     <br>
                     <br>
                     <br>
