--- a/socials.html
+++ b/socials.html
@@ -45,7 +45,7 @@
                         <button type="button"><span></span>
                             <img src="yt.png", width="60", height="64">                        
                         </button>
-                        <a href="https://www.instagram.com/kislay_2007">
+                        <a href="https://www.instagram.com/_kislayy_">
                             <button type="button"><span></span>
                                 <img src="insta.png", width="90", height="64">                        
                             </button>
@@ -65,7 +65,7 @@
                     <div class="contacts">
                         <div class="body">
                             <h2>Discord</h2>
-                            <p>DM me @ Yogi#2324</p>
+                            <p>DM me @ Kishu#2324</p>
                         </div>
                     </div>
                 </div>
