--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,134 @@
                     <br>
                     <br>
                     
-                    (This page is will be built in the future)
+                    zindagi ki race mein akela hu main bhaagta
+inn aadhi aadhi raato me najaane kyun main jaagta, [pause] 
+
+[BEAT START] 
+
+haan chahiye thoda naam, recognition mile kaash
+mujhe chut ki talash
+mujhe chut ki talash
+satyaanash zindagi ka hua, bana zinda laash
+mujhe chut ki talash 
+mujhe chut ki talash
+
+[VERSE 1][KISLAY]
+
+yeah I'm looking for some pussy
+thode vertical se hoth
+kaash jeb mein hoti chut, 
+jaise pade rehte note
+hoti thodi mujhe khushi
+but o shit I'm fucking broke
+
+Kehte goat, wo jo launde ghoomte hain mere saath me
+I fucked it all up, kuch naa bacha mere haath me
+siwaaye meri lulli, jisse mutthi maaru raat me
+
+aukaat me tu baat kar,
+na chadh tu mere sar par
+chahiye bandi aisi
+jo rehti ho apne ghar par
+ho kam padhi likhi,
+ho preferrably anpadh
+
+cuz all these are my fetishes idk how it's relevant
+but pussy from illiterate bitches be hittin' different
+
+haan gandi meri vibe, hai gandi meri awaaz
+mujhe chut ki talash
+mujhe chut ki talash
+meri soch bhi hai gandi, mera mattha hai kharab
+mujhe chut ki talash 
+mujhe chut ki talash
+
+[VERSE 2] [JOY]
+Haan iss chut ki talash mein main karta masturbate
+bandi chahiye mujhko aisi jo ho mere intimate
+
+wo to rehti hai ek kothe me aur saamne uska gate
+karta wait, kyunki aaya main bhot hope se
+wo kehti wtf? kuch na hoga 100 ke note se
+jaa batua lele gaand me ja ghar ja apne straight
+dungi tujhe main na kuch bhi kyunki badh gaye mere rate 
+I say life's no marathon it's a motherfucking race
+jis race me tera bhai daude always sabse tez
+
+call that pussy Ghaza patti cuz I want it like Hamas
+mujhe chut ki talash 
+mujhe chut ki talash
+my face so deep in her coochie mujhe aati na hai saans
+mujhe chut ki talash
+mujhe chut ki talash
+
+[VERSE 3][AARUSH chamaar]
+Sendha namak jeb mein to bandi bane singer
+Loner bando ke liye ab to gb road hi tinder
+Hatho se bhara man leliye can wale pringles
+Sath me do sponge latex gloves fir set systum
+Bitch says shes home alone Then i plow the pillow princess
+Bitch be actin crazy but She aint on her Menses
+I Crossed some lines then i jump over the fences
+She wanna grab a seat and my nostrils are her benches
+
+Mit gai hath ki line par forearm mera tight
+meri Kismat mein nahi chut to hilata all night
+I’m Jerking on my toes kyuki badhani meko height
+Wo kehte hun main incel and they are always right
+
+I need a top bandi jo rakhti ho finger tips pe
+Pussy me jalepeno dip saath uncle chips ke
+Bandi tu hai kinky to nikalu apne whips mein
+Haan Tits pe whipped cream i be Working on my Licks man
+
+Chahiye big tiddy goth baddie in a saree
+bitches yaha pe same ye sari ki sari
+Nhi chahiye sobo bitch prefernce is pahari
+Played me all night bitch Ab meri bari
+Yeah
+
+[VERSE 4][JOY REALEST LITERALLY ME()]
+Call aya baap ko ki ladka aapka thaane mei
+Krta public indecency rakhlo isko naape mei
+
+To naapi guddi baap ne aur peeta mujhko rod se
+Jo mutthi maare public me wo darte naa hain maut se(TBSM)
+
+kehti "itna chota lund mai toh khati ye desert mein"(high pitch)
+chud gya mera matha toh ban jaunga beserk mai 
+
+Naa milti mujhko chut par ye chut hi mujhko kheche
+Yaha launde mere saath mein ladhate hum sab peche
+usko pasand crazy ladke ab hai aankhein uski neeche
+
+Chahiye ni viagra mujhe Chahiye Chawanpraash
+Mujhe chut ki talaash mujhe chut ki talaash 
+wear that adrak condom uske gale me kharaash
+Mujhe chut ki talaash mujhe chut ki talaash
+
+[VERSE 5] 
+
+Ab bas chahiye mujhe chut
+Jo ho thodi safe aur sound
+Usne dekhe itne players
+Call her unknown battleground
+Main na dekhu koi currency
+Bas karna chaahu 'pound'
+
+2nd round jab wo kehti
+to ho jaata hu main dher
+Call her carbon element
+4 launde kare share
+
+share hoti wo bazaar me
+I call it share market
+haan bandi bichi flat
+jaise bicha rehta carpet
+jab dekhu uski 'butt' to
+I hit the damn target
+
+Bhar paet chakna aur rehta haath mein gilaas
+mujhe chut ki talash mujhe chut ki Talaash
                 </p>
             </div>
