--- a/projects.html
+++ b/projects.html
@@ -30,48 +30,48 @@
                     <br>
                     <br>
                     
-                    zindagi ki race mein akela hu main bhaagta
-inn aadhi aadhi raato me najaane kyun main jaagta, [pause] 
-
+                    zindagi ki race mein akela hu main bhaagta <br>
+inn aadhi aadhi raato me najaane kyun main jaagta, [pause] <br>
+<br>
 [BEAT START] 
-
-haan chahiye thoda naam, recognition mile kaash
+<br>
+haan chahiye thoda naam, recognition mile kaash <br>
+mujhe chut ki talash <br>
 mujhe chut ki talash
-mujhe chut ki talash
-satyaanash zindagi ka hua, bana zinda laash
-mujhe chut ki talash 
-mujhe chut ki talash
-
+satyaanash zindagi ka hua, bana zinda laash <br>
+mujhe chut ki talash <br>
+mujhe chut ki talash <br>
+<br>
 [VERSE 1][KISLAY]
-
-yeah I'm looking for some pussy
-thode vertical se hoth
-kaash jeb mein hoti chut, 
-jaise pade rehte note
-hoti thodi mujhe khushi
-but o shit I'm fucking broke
-
-Kehte goat, wo jo launde ghoomte hain mere saath me
-I fucked it all up, kuch naa bacha mere haath me
-siwaaye meri lulli, jisse mutthi maaru raat me
-
-aukaat me tu baat kar,
-na chadh tu mere sar par
-chahiye bandi aisi
-jo rehti ho apne ghar par
-ho kam padhi likhi,
-ho preferrably anpadh
-
-cuz all these are my fetishes idk how it's relevant
-but pussy from illiterate bitches be hittin' different
-
-haan gandi meri vibe, hai gandi meri awaaz
-mujhe chut ki talash
-mujhe chut ki talash
-meri soch bhi hai gandi, mera mattha hai kharab
-mujhe chut ki talash 
-mujhe chut ki talash
-
+<br>
+yeah I'm looking for some pussy <br>
+thode vertical se hoth <br>
+kaash jeb mein hoti chut, <br>
+jaise pade rehte note <br>
+hoti thodi mujhe khushi <br>
+but o shit I'm fucking broke <br>
+<br>
+Kehte goat, wo jo launde ghoomte hain mere saath me <br>
+I fucked it all up, kuch naa bacha mere haath me <br>
+siwaaye meri lulli, jisse mutthi maaru raat me <br>
+<br>
+aukaat me tu baat kar, <br>
+na chadh tu mere sar par <br>
+chahiye bandi aisi <br>
+jo rehti ho apne ghar par <br>
+ho kam padhi likhi, <br>
+ho preferrably anpadh <br>
+<br>
+cuz all these are my fetishes idk how it's relevant <br>
+but pussy from illiterate bitches be hittin' different <br>
+<br>
+haan gandi meri vibe, hai gandi meri awaaz <br>
+mujhe chut ki talash <br>
+mujhe chut ki talash <br>
+meri soch bhi hai gandi, mera mattha hai kharab <br>
+mujhe chut ki talash <br>
+mujhe chut ki talash <br>
+<br>
 [VERSE 2] [JOY]
 Haan iss chut ki talash mein main karta masturbate
 bandi chahiye mujhko aisi jo ho mere intimate
