--- a/projects.html
+++ b/projects.html
@@ -30,9 +30,6 @@
                     <br>
                     <br>
                     
-                    zindagi ki race mein akela hu main bhaagta <br>
-inn aadhi aadhi raato me najaane kyun main jaagta, [pause] <br>
-<br>
 [BEAT START] 
 <br>
 haan chahiye thoda naam, recognition mile kaash <br>
@@ -72,92 +69,64 @@ meri soch bhi hai gandi, mera mattha hai kharab <br>
 mujhe chut ki talash <br>
 mujhe chut ki talash <br>
 <br>
-[VERSE 2] [JOY]
-Haan iss chut ki talash mein main karta masturbate
-bandi chahiye mujhko aisi jo ho mere intimate
-
-wo to rehti hai ek kothe me aur saamne uska gate
-karta wait, kyunki aaya main bhot hope se
-wo kehti wtf? kuch na hoga 100 ke note se
-jaa batua lele gaand me ja ghar ja apne straight
-dungi tujhe main na kuch bhi kyunki badh gaye mere rate 
-I say life's no marathon it's a motherfucking race
-jis race me tera bhai daude always sabse tez
-
-call that pussy Ghaza patti cuz I want it like Hamas
-mujhe chut ki talash 
-mujhe chut ki talash
-my face so deep in her coochie mujhe aati na hai saans
-mujhe chut ki talash
-mujhe chut ki talash
-
-[VERSE 3][AARUSH chamaar]
-Sendha namak jeb mein to bandi bane singer
-Loner bando ke liye ab to gb road hi tinder
-Hatho se bhara man leliye can wale pringles
-Sath me do sponge latex gloves fir set systum
-Bitch says shes home alone Then i plow the pillow princess
-Bitch be actin crazy but She aint on her Menses
-I Crossed some lines then i jump over the fences
-She wanna grab a seat and my nostrils are her benches
-
-Mit gai hath ki line par forearm mera tight
-meri Kismat mein nahi chut to hilata all night
-I’m Jerking on my toes kyuki badhani meko height
-Wo kehte hun main incel and they are always right
-
-I need a top bandi jo rakhti ho finger tips pe
-Pussy me jalepeno dip saath uncle chips ke
-Bandi tu hai kinky to nikalu apne whips mein
-Haan Tits pe whipped cream i be Working on my Licks man
-
-Chahiye big tiddy goth baddie in a saree
-bitches yaha pe same ye sari ki sari
-Nhi chahiye sobo bitch prefernce is pahari
-Played me all night bitch Ab meri bari
-Yeah
-
-[VERSE 4][JOY REALEST LITERALLY ME()]
-Call aya baap ko ki ladka aapka thaane mei
-Krta public indecency rakhlo isko naape mei
-
-To naapi guddi baap ne aur peeta mujhko rod se
-Jo mutthi maare public me wo darte naa hain maut se(TBSM)
-
-kehti "itna chota lund mai toh khati ye desert mein"(high pitch)
-chud gya mera matha toh ban jaunga beserk mai 
-
-Naa milti mujhko chut par ye chut hi mujhko kheche
-Yaha launde mere saath mein ladhate hum sab peche
-usko pasand crazy ladke ab hai aankhein uski neeche
-
-Chahiye ni viagra mujhe Chahiye Chawanpraash
-Mujhe chut ki talaash mujhe chut ki talaash 
-wear that adrak condom uske gale me kharaash
-Mujhe chut ki talaash mujhe chut ki talaash
-
-[VERSE 5] 
-
-Ab bas chahiye mujhe chut
-Jo ho thodi safe aur sound
-Usne dekhe itne players
-Call her unknown battleground
-Main na dekhu koi currency
-Bas karna chaahu 'pound'
-
-2nd round jab wo kehti
-to ho jaata hu main dher
-Call her carbon element
-4 launde kare share
-
-share hoti wo bazaar me
-I call it share market
-haan bandi bichi flat
-jaise bicha rehta carpet
-jab dekhu uski 'butt' to
-I hit the damn target
-
-Bhar paet chakna aur rehta haath mein gilaas
-mujhe chut ki talash mujhe chut ki Talaash
+[VERSE 2] [JOY] <br>
+Haan iss chut ki talash mein main karta masturbate<br>
+bandi chahiye mujhko aisi jo ho mere intimate<br>
+<br>
+wo to rehti hai ek kothe me aur saamne uska gate<br>
+karta wait, kyunki aaya main bhot hope se<br>
+wo kehti wtf? kuch na hoga 100 ke note se<br>
+jaa batua lele gaand me ja ghar ja apne straight<br>
+dungi tujhe main na kuch bhi kyunki badh gaye mere rate <br>
+I say life's no marathon it's a motherfucking race<br>
+jis race me tera bhai daude always sabse tez<br>
+<br>
+call that pussy Ghaza patti cuz I want it like Hamas<br>
+mujhe chut ki talash <br>
+mujhe chut ki talash<br>
+my face so deep in her coochie mujhe aati na hai saans<br>
+mujhe chut ki talash<br>
+mujhe chut ki talash<br>
+<br>
+[VERSE 4][JOY REALEST LITERALLY ME()]<br>
+Call aya baap ko ki ladka aapka thaane mei<br>
+Krta public indecency rakhlo isko naape mei<br>
+<br>
+To naapi guddi baap ne aur peeta mujhko rod se<br>
+Jo mutthi maare public me wo darte naa hain maut se(TBSM)<br>
+<br>
+kehti "itna chota lund mai toh khati ye desert mein"(high pitch)<br>
+chud gya mera matha toh ban jaunga beserk mai <br>
+<br>
+Naa milti mujhko chut par ye chut hi mujhko kheche<br>
+Yaha launde mere saath mein ladhate hum sab peche<br>
+usko pasand crazy ladke ab hai aankhein uski neeche<br>
+<br>
+Chahiye ni viagra mujhe Chahiye Chawanpraash<br>
+Mujhe chut ki talaash mujhe chut ki talaash <br>
+wear that adrak condom uske gale me kharaash<br>
+Mujhe chut ki talaash mujhe chut ki talaash<br>
+<br>
+[VERSE 5] <br>
+<br>
+Ab bas chahiye mujhe chut<br>
+Jo ho thodi safe aur sound<br>
+Usne dekhe itne players<br>
+Call her unknown battleground<br>
+Main na dekhu koi currency<br>
+Bas karna chaahu 'pound'<br>
+2nd round jab wo kehti<br>
+to ho jaata hu main dher<br>
+Call her carbon element<br>
+4 launde kare share<br>
+share hoti wo bazaar me<br>
+I call it share market<br>
+haan bandi bichi flat<br>
+jaise bicha rehta carpet<br>
+jab dekhu uski 'butt' to<br>
+I hit the damn target<br>
+<br>
+Bhar paet chakna aur rehta haath mein gilaas<br>
+mujhe chut ki talash mujhe chut ki Talaash<br>
                 </p>
             </div>
