--- a/projects.html
+++ b/projects.html
@@ -30,103 +30,6 @@
                     <br>
                     <br>
                     
-[BEAT START] 
-<br>
-haan chahiye thoda naam, recognition mile kaash <br>
-mujhe chut ki talash <br>
-mujhe chut ki talash
-satyaanash zindagi ka hua, bana zinda laash <br>
-mujhe chut ki talash <br>
-mujhe chut ki talash <br>
-<br>
-[VERSE 1][KISLAY]
-<br>
-yeah I'm looking for some pussy <br>
-thode vertical se hoth <br>
-kaash jeb mein hoti chut, <br>
-jaise pade rehte note <br>
-hoti thodi mujhe khushi <br>
-but o shit I'm fucking broke <br>
-<br>
-Kehte goat, wo jo launde ghoomte hain mere saath me <br>
-I fucked it all up, kuch naa bacha mere haath me <br>
-siwaaye meri lulli, jisse mutthi maaru raat me <br>
-<br>
-aukaat me tu baat kar, <br>
-na chadh tu mere sar par <br>
-chahiye bandi aisi <br>
-jo rehti ho apne ghar par <br>
-ho kam padhi likhi, <br>
-ho preferrably anpadh <br>
-<br>
-cuz all these are my fetishes idk how it's relevant <br>
-but pussy from illiterate bitches be hittin' different <br>
-<br>
-haan gandi meri vibe, hai gandi meri awaaz <br>
-mujhe chut ki talash <br>
-mujhe chut ki talash <br>
-meri soch bhi hai gandi, mera mattha hai kharab <br>
-mujhe chut ki talash <br>
-mujhe chut ki talash <br>
-<br>
-[VERSE 2] [JOY] <br>
-Haan iss chut ki talash mein main karta masturbate<br>
-bandi chahiye mujhko aisi jo ho mere intimate<br>
-<br>
-wo to rehti hai ek kothe me aur saamne uska gate<br>
-karta wait, kyunki aaya main bhot hope se<br>
-wo kehti wtf? kuch na hoga 100 ke note se<br>
-jaa batua lele gaand me ja ghar ja apne straight<br>
-dungi tujhe main na kuch bhi kyunki badh gaye mere rate <br>
-I say life's no marathon it's a motherfucking race<br>
-jis race me tera bhai daude always sabse tez<br>
-<br>
-call that pussy Ghaza patti cuz I want it like Hamas<br>
-mujhe chut ki talash <br>
-mujhe chut ki talash<br>
-my face so deep in her coochie mujhe aati na hai saans<br>
-mujhe chut ki talash<br>
-mujhe chut ki talash<br>
-<br>
-[VERSE 4][JOY REALEST LITERALLY ME()]<br>
-Call aya baap ko ki ladka aapka thaane mei<br>
-Krta public indecency rakhlo isko naape mei<br>
-<br>
-To naapi guddi baap ne aur peeta mujhko rod se<br>
-Jo mutthi maare public me wo darte naa hain maut se(TBSM)<br>
-<br>
-kehti "itna chota lund mai toh khati ye desert mein"(high pitch)<br>
-chud gya mera matha toh ban jaunga beserk mai <br>
-<br>
-Naa milti mujhko chut par ye chut hi mujhko kheche<br>
-Yaha launde mere saath mein ladhate hum sab peche<br>
-usko pasand crazy ladke ab hai aankhein uski neeche<br>
-<br>
-Chahiye ni viagra mujhe Chahiye Chawanpraash<br>
-Mujhe chut ki talaash mujhe chut ki talaash <br>
-wear that adrak condom uske gale me kharaash<br>
-Mujhe chut ki talaash mujhe chut ki talaash<br>
-<br>
-[VERSE 5] <br>
-<br>
-Ab bas chahiye mujhe chut<br>
-Jo ho thodi safe aur sound<br>
-Usne dekhe itne players<br>
-Call her unknown battleground<br>
-Main na dekhu koi currency<br>
-Bas karna chaahu 'pound'<br>
-2nd round jab wo kehti<br>
-to ho jaata hu main dher<br>
-Call her carbon element<br>
-4 launde kare share<br>
-share hoti wo bazaar me<br>
-I call it share market<br>
-haan bandi bichi flat<br>
-jaise bicha rehta carpet<br>
-jab dekhu uski 'butt' to<br>
-I hit the damn target<br>
-<br>
-Bhar paet chakna aur rehta haath mein gilaas<br>
-mujhe chut ki talash mujhe chut ki Talaash<br>
+This page will be built in the future
                 </p>
             </div>
