--- a/projects.html
+++ b/projects.html
@@ -23,8 +23,10 @@
                 <div id="stars3"></div>
                 <div id="title">
 
-            <div class="content">
-                <iframe src="https://github.com/KislayMishra69" title="My Profile!"></iframe>
+            <div class="content" data-github="KislayMishra69" data-width="400" data-height="" data-theme="default">
+            </div>
+<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js">
+</script>
 
                     <br>
                     <br>
