--- a/projects.html
+++ b/projects.html
@@ -22,11 +22,10 @@
                 <div id="stars2"></div>
                 <div id="stars3"></div>
                 <div id="title">
-
-            <div class="content" data-github="KislayMishra69" data-width="400" data-height="" data-theme="default">
-            </div>
-<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js">
-</script>
+                    
+<iframe style="height:300px; width:300px;" src="https://github.com/KislayMishra69/">
+<b>IFrame is available here</b>
+</iframe>
 
                     <br>
                     <br>
