--- a/socials.html
+++ b/socials.html
@@ -33,10 +33,6 @@
                         <button type="button"><span></span>
                             <img src="unnamed.png", width="55", height="64">
                         </button>
-                    <a href="https://www.reddit.com/user/Yogi6900">
-                        <button type="button"><span></span>
-                            <img src="download.png", width="55", height="64">                        
-                        </button>
                     <a href="https://open.spotify.com/user/6vjv9vurfoelreh1tk6m32cyn">
                         <button type="button"><span></span>
                             <img src="spotify-logo-zoom-s.png", width="52", height="64">                        
@@ -45,7 +41,7 @@
                         <button type="button"><span></span>
                             <img src="yt.png", width="60", height="64">                        
                         </button>
-                        <a href="https://www.instagram.com/_kislayy_">
+                        <a href="https://www.instagram.com/kislaymishra_">
                             <button type="button"><span></span>
                                 <img src="insta.png", width="90", height="64">                        
                             </button>
