--- a/aboutme.html
+++ b/aboutme.html
@@ -30,10 +30,10 @@
                 <div class="contents">
                     <ul class="abt">
                         <li>High-Schooler</li>
-                        <li>He/Him</li>
+                        <li>Music Producer</li>
                         <li>Cyber Security Enthusiast</li>
                         <li>Programmer</li>
-                        <li>Pythoneer</li>
+                        <li>Freelance Editor (VFX/GFX)</li>
                         <li>Video Editor</li>
                     </ul>
                 </div>
@@ -42,6 +42,7 @@
                     <ul class="learn">
                         <li>HTML</li>
                         <li>CSS</li>
+                        <li>JS</li>
                         <li>C#</li>
                         <li>Python</li>
 
